[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kid_ppg"
version = "0.0.4"
authors = [
  { name="Christodoulos Kechris", email="christodoulos.kechris@epfl.ch" }
]
description = "A library for performing probabilistic heart rate extraction from photoplehysmography signals."
readme = "README.md"
requires-python = "==3.10.8"
dependencies = [
  "silence_tensorflow==1.2.1",
  "numpy==1.24.3",
  "tensorflow==2.13.0",
  "tensorflow-probability==0.20.1",
  "scipy==1.12.0"
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/esl-epfl/KID-PPG"